@@ -2,7 +2,6 @@ package org.jabref.logic.xmp;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
@@ -10,13 +9,12 @@ import java.util.List;
 import java.util.Optional;
 
 import org.jabref.logic.importer.ImportFormatPreferences;
-import org.jabref.logic.importer.ParseException;
-import org.jabref.logic.importer.fileformat.BibtexParser;
+import org.jabref.logic.importer.fileformat.BibtexImporter;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
+import org.jabref.model.schema.DublinCoreSchemaCustom;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 
-import com.google.common.io.Resources;
 import org.apache.xmpbox.XMPMetadata;
 import org.apache.xmpbox.schema.DublinCoreSchema;
 import org.junit.jupiter.api.BeforeEach;
@@ -30,57 +28,71 @@ import static org.mockito.Mockito.when;
 class XmpUtilReaderTest {
 
     private XmpPreferences xmpPreferences;
-    private BibtexParser parser;
+    private BibtexImporter testImporter;
+    private final XmpUtilReader xmpUtilReader = new XmpUtilReader();
 
     /**
      * Create a temporary PDF-file with a single empty page.
      */
     @BeforeEach
     void setUp() {
-        ImportFormatPreferences importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
         xmpPreferences = mock(XmpPreferences.class);
         // The code assumes privacy filters to be off
         when(xmpPreferences.shouldUseXmpPrivacyFilter()).thenReturn(false);
 
         when(xmpPreferences.getKeywordSeparator()).thenReturn(',');
 
-        parser = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor());
+        testImporter = new BibtexImporter(mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS), new DummyFileUpdateMonitor());
     }
 
     /**
      * Tests reading of dublinCore metadata.
      */
     @Test
-    void testReadArticleDublinCoreReadRawXmp() throws IOException, URISyntaxException, ParseException {
-        Path path = Path.of(XmpUtilShared.class.getResource("article_dublinCore.pdf").toURI());
-        List<XMPMetadata> meta = XmpUtilReader.readRawXmp(path);
+    void testReadArticleDublinCoreReadRawXmp() throws IOException, URISyntaxException {
+        Path path = Path.of(XmpUtilShared.class.getResource("article_dublinCore_without_day.pdf").toURI());
+        List<XMPMetadata> meta = xmpUtilReader.readRawXmp(path);
 
-        DublinCoreSchema dcSchema = meta.get(0).getDublinCoreSchema();
+        DublinCoreSchema dcSchema = DublinCoreSchemaCustom.copyDublinCoreSchema(meta.get(0).getDublinCoreSchema());
         DublinCoreExtractor dcExtractor = new DublinCoreExtractor(dcSchema, xmpPreferences, new BibEntry());
         Optional<BibEntry> entry = dcExtractor.extractBibtexEntry();
-        String bibString = Resources.toString(XmpUtilShared.class.getResource("article_dublinCore.bib"), StandardCharsets.UTF_8);
-        Optional<BibEntry> entryFromBibFile = parser.parseSingleEntry(bibString);
 
-        assertEquals(entryFromBibFile.get(), entry.get());
+        Path bibFile = Path.of(XmpUtilShared.class.getResource("article_dublinCore_without_day.bib").toURI());
+        List<BibEntry> expected = testImporter.importDatabase(bibFile).getDatabase().getEntries();
+
+        assertEquals(expected, Collections.singletonList(entry.get()));
     }
 
     /**
      * Tests reading of dublinCore metadata.
      */
     @Test
-    void testReadArticleDublinCoreReadXmp() throws IOException, URISyntaxException, ParseException {
+    void testReadArticleDublinCoreReadXmp() throws IOException, URISyntaxException {
         Path pathPdf = Path.of(XmpUtilShared.class.getResource("article_dublinCore.pdf").toURI());
-        List<BibEntry> entries = XmpUtilReader.readXmp(pathPdf, xmpPreferences);
-        BibEntry entry = entries.get(0);
+        List<BibEntry> entries = xmpUtilReader.readXmp(pathPdf, xmpPreferences);
+        Path bibFile = Path.of(XmpUtilShared.class.getResource("article_dublinCore.bib").toURI());
+        List<BibEntry> expected = testImporter.importDatabase(bibFile).getDatabase().getEntries();
 
-        String bibString = Resources.toString(XmpUtilShared.class.getResource("article_dublinCore.bib"), StandardCharsets.UTF_8);
-        Optional<BibEntry> entryFromBibFile = parser.parseSingleEntry(bibString);
-        entryFromBibFile.get().setFiles(Arrays.asList(
+        expected.forEach(bibEntry -> bibEntry.setFiles(Arrays.asList(
                 new LinkedFile("", Path.of("paper.pdf"), "PDF"),
                 new LinkedFile("", pathPdf.toAbsolutePath(), "PDF"))
-        );
+        ));
 
-        assertEquals(entryFromBibFile.get(), entry);
+        assertEquals(expected, entries);
+    }
+
+    @Test
+    void testReadArticleDublinCoreReadXmpPartialDate() throws IOException, URISyntaxException {
+        Path pathPdf = Path.of(XmpUtilShared.class.getResource("article_dublinCore_partial_date.pdf").toURI());
+        List<BibEntry> entries = xmpUtilReader.readXmp(pathPdf, xmpPreferences);
+        Path bibFile = Path.of(XmpUtilShared.class.getResource("article_dublinCore_partial_date.bib").toURI());
+        List<BibEntry> expected = testImporter.importDatabase(bibFile).getDatabase().getEntries();
+
+        expected.forEach(bibEntry -> bibEntry.setFiles(List.of(
+                new LinkedFile("", pathPdf.toAbsolutePath(), "PDF"))
+        ));
+
+        assertEquals(expected, entries);
     }
 
     /**
@@ -88,7 +100,7 @@ class XmpUtilReaderTest {
      */
     @Test
     void testReadEmtpyMetadata() throws IOException, URISyntaxException {
-        List<BibEntry> entries = XmpUtilReader.readXmp(Path.of(XmpUtilShared.class.getResource("empty_metadata.pdf").toURI()), xmpPreferences);
+        List<BibEntry> entries = xmpUtilReader.readXmp(Path.of(XmpUtilShared.class.getResource("empty_metadata.pdf").toURI()), xmpPreferences);
         assertEquals(Collections.emptyList(), entries);
     }
 
@@ -96,17 +108,18 @@ class XmpUtilReaderTest {
      * Test non XMP metadata. Metadata are included in the PDInformation
      */
     @Test
-    void testReadPDMetadata() throws IOException, URISyntaxException, ParseException {
+    void testReadPDMetadata() throws IOException, URISyntaxException {
         Path pathPdf = Path.of(XmpUtilShared.class.getResource("PD_metadata.pdf").toURI());
-        List<BibEntry> entries = XmpUtilReader.readXmp(pathPdf, xmpPreferences);
+        List<BibEntry> entries = xmpUtilReader.readXmp(pathPdf, xmpPreferences);
 
-        String bibString = Resources.toString(XmpUtilShared.class.getResource("PD_metadata.bib"), StandardCharsets.UTF_8);
-        Optional<BibEntry> entryFromBibFile = parser.parseSingleEntry(bibString);
-        entryFromBibFile.get().setFiles(Collections.singletonList(
+        Path bibFile = Path.of(XmpUtilShared.class.getResource("PD_metadata.bib").toURI());
+        List<BibEntry> expected = testImporter.importDatabase(bibFile).getDatabase().getEntries();
+
+        expected.forEach(bibEntry -> bibEntry.setFiles(List.of(
                 new LinkedFile("", pathPdf.toAbsolutePath(), "PDF"))
-        );
+        ));
 
-        assertEquals(entryFromBibFile.get(), entries.get(0));
+        assertEquals(expected, entries);
     }
 
     /**
@@ -114,7 +127,7 @@ class XmpUtilReaderTest {
      */
     @Test
     void testReadNoDescriptionMetadata() throws IOException, URISyntaxException {
-        List<BibEntry> entries = XmpUtilReader.readXmp(Path.of(XmpUtilShared.class.getResource("no_description_metadata.pdf").toURI()), xmpPreferences);
+        List<BibEntry> entries = xmpUtilReader.readXmp(Path.of(XmpUtilShared.class.getResource("no_description_metadata.pdf").toURI()), xmpPreferences);
         assertEquals(Collections.emptyList(), entries);
     }
 }
